--- a/public/style.css
+++ b/public/style.css
@@ -1,12 +1,14 @@
-/****** AUTH ******/
+body{
+    font-family: verdana;
+}
 
+/* * * * * * AUTH * * * * * */
 .auth-container{
     position: absolute;
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
 
-    font-family: verdana;
     background-color: #F3F3F3;
     padding: 5px 20px;
     border-radius: 5px;
@@ -17,7 +19,7 @@
     margin: 0px 10px;
 }
 
-
+/* Input boxes */
 .auth-form input{
     border-radius: 5px;
     padding: 10px 10px;
@@ -40,10 +42,13 @@
     opacity: 1.0;
     background-color: #FFFFFF;
 }
+
+/* For the submit buttons*/
 .auth-form.auth-buttons{
     display: flex;
     justify-content: flex-end;
 }
+
 .auth-form button{
     padding: 10px;
     font-size: 12px;
@@ -54,4 +59,18 @@
 
 .auth-form button:focus{
     background-color: #FAFAFA;
+}
+
+/* Error box */
+#errorbox{
+    display: none;
+    position: absolute;
+
+    padding: 10px 50px;
+    background-color: rgba(255,0,0,0.3);
+
+    left: 50%;
+    top: 15%;
+    transform: translate(-50%, -50%);
+    border-radius: 20px;
 }
