--- a/views/auth/login.handlebars
+++ b/views/auth/login.handlebars
@@ -2,10 +2,9 @@
 <div id="errorbox">You shouldn't be seeing this</div>
 
 <div class="auth-container">
-    <form id="register" method="POST" action="/register">
-    <legend><h1>Register</h1></legend>
+    <form id="login" method="POST" action="/login">
+    <legend><h1>Login</h1></legend>
         {{>auth}}
-
     </form>
 </div>
 
