Users done; temp links for routes for now

--- a/views/auth/register.handlebars
+++ b/views/auth/register.handlebars
@@ -2,10 +2,12 @@
 <div id="errorbox">You shouldn't be seeing this</div>
 
 <div class="auth-container">
-    <form id="register" method="POST" action="/register">
     <legend><h1>Register</h1></legend>
+    <form id="register">
         {{>auth}}
-
+        <div class="auth-buttons auth-form">
+            <button type="submit">Register</button>
+        </div>
     </form>
 </div>
 
