--- a/views/partials/auth.handlebars
+++ b/views/partials/auth.handlebars
@@ -1,12 +1,4 @@
-<div class="auth-user auth-form">
-    <input id="username" name="username" type="text" placeholder="Username"></input>
-</div>
-
-<div class="auth-pass auth-form">
-    <input id="password" name="password" type="password" placeholder="Password"></input>
-</div>
-
-<div class="auth-buttons auth-form">
-    <button type="submit" class="auth-submit-btn">Submit</button>
-    <a class="btn btn-danger" href="/" role="button"><button>Cancel</button></a>
+<div class="auth-user">
+    <input id="username" type="text" placeholder="Username"></input>
+    <input id="password" type="password" placeholder="Password"></input>
 </div>
