--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,22 @@
 body{
     font-family: verdana;
 }
+/* * * * * * LOG CHECK * * * * * */
+.logged-in {
+    display: none;
+}
+
+.logged-out{
+    display: block
+}
+
+body.logged .logged-in{
+    display: block;
+}
+
+body.logged .logged-out{
+    display: none;
+}
 
 /* * * * * * AUTH * * * * * */
 .auth-container{
@@ -14,42 +30,41 @@ body{
     border-radius: 5px;
 }
 
-.auth-form{
+.auth-container div{
     padding: 10px;
-    margin: 0px 10px;
 }
 
 /* Input boxes */
-.auth-form input{
+.auth-container input{
+    display: block;
+    margin: 5px auto;
+
     border-radius: 5px;
     padding: 10px 10px;
-
     font-size: 20px;
-
     opacity: 0.5;
-
     border: 1px solid #666;
     box-shadow:
         inset 0 1px 2px rgba(0,0,0, .35),
         0px 1px 1px rgba(255,255,255,.3);
 }
 
-.auth-form input:focus, button{
+.auth-container input:focus, button{
     outline: none;
 }
 
-.auth-form input:hover{
+.auth-container input:hover{
     opacity: 1.0;
     background-color: #FFFFFF;
 }
 
 /* For the submit buttons*/
-.auth-form.auth-buttons{
+.auth-container .auth-buttons{
     display: flex;
     justify-content: flex-end;
 }
 
-.auth-form button{
+.auth-container button{
     padding: 10px;
     font-size: 12px;
     background-color: white;
@@ -57,7 +72,7 @@ body{
     margin: 0px 2px;
 }
 
-.auth-form button:focus{
+.auth-container button:focus{
     background-color: #FAFAFA;
 }
 
