--- a/views/auth/login.handlebars
+++ b/views/auth/login.handlebars
@@ -2,9 +2,12 @@
 <div id="errorbox">You shouldn't be seeing this</div>
 
 <div class="auth-container">
-    <form id="login" method="POST" action="/login">
     <legend><h1>Login</h1></legend>
+    <form id="login">
         {{>auth}}
+        <div class="auth-buttons">
+            <button type="submit">Login</button>
+        </div>
     </form>
 </div>
 
