--- a/views/auth/register.handlebars
+++ b/views/auth/register.handlebars
@@ -5,7 +5,7 @@
     <legend><h1>Register</h1></legend>
     <form id="register">
         {{>auth}}
-        <div class="auth-buttons auth-form">
+        <div class="auth-buttons">
             <button type="submit">Register</button>
         </div>
     </form>
