Switching to API - register done

--- a/views/partials/auth.handlebars
+++ b/views/partials/auth.handlebars
@@ -1,4 +1,6 @@
 <div class="auth-user">
-    <input id="username" type="text" placeholder="Username"></input>
-    <input id="password" type="password" placeholder="Password"></input>
+    <!-- If you want to change this, you'll need to go to the jquery -->
+    <input id="username" type="text" placeholder="Username">
+    <input id="email" type="text" placeholder="E-mail">
+    <input id="password" type="password" placeholder="Password">
 </div>
