--- a/new-layout/css/style.css
+++ b/new-layout/css/style.css
@@ -1,96 +1,9 @@
 body{
-    font-family: verdana;
+  margin:0;
 }
-/* * * * * * LOG CHECK * * * * * */
-.logged-in {
-    display: none;
+*{
+  box-sizing:border-box;
 }
-
-.logged-out{
-    display: block
-}
-
-body.logged .logged-in{
-    display: block;
-}
-
-body.logged .logged-out{
-    display: none;
-}
-
-/* * * * * * AUTH * * * * * */
-.auth-container{
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-
-    background-color: #F3F3F3;
-    padding: 5px 20px;
-    border-radius: 5px;
-}
-
-.auth-container div{
-    padding: 10px;
-}
-
-/* Input boxes */
-.auth-container input{
-    display: block;
-    margin: 5px auto;
-
-    border-radius: 5px;
-    padding: 10px 10px;
-    font-size: 20px;
-    opacity: 0.5;
-    border: 1px solid #666;
-    box-shadow:
-        inset 0 1px 2px rgba(0,0,0, .35),
-        0px 1px 1px rgba(255,255,255,.3);
-}
-
-.auth-container input:focus, button{
-    outline: none;
-}
-
-.auth-container input:hover{
-    opacity: 1.0;
-    background-color: #FFFFFF;
-}
-
-/* For the submit buttons*/
-.auth-container .auth-buttons{
-    display: flex;
-    justify-content: flex-end;
-}
-
-.auth-container button{
-    padding: 10px;
-    font-size: 12px;
-    background-color: white;
-    border-radius: 5px;
-    margin: 0px 2px;
-}
-
-.auth-container button:focus{
-    background-color: #FAFAFA;
-}
-
-/* Error box */
-#errorbox{
-    display: none;
-    position: absolute;
-
-    padding: 10px 50px;
-    background-color: rgba(255,0,0,0.3);
-
-    left: 50%;
-    top: 15%;
-    transform: translate(-50%, -50%);
-    border-radius: 20px;
-}
-
-/* Laurel stuff*/
 
 #main-wrapper{
   display:grid;
@@ -100,7 +13,7 @@ body.logged .logged-out{
   grid-template-rows: 2em auto;
   background-color:#a1b290;
   height:100vh;
-
+  
 }
 
 #top-tool-bar{
@@ -121,10 +34,10 @@ body.logged .logged-out{
   display:grid;
   grid-template-columns:repeat(2,1fr);
   grid-auto-rows:7em;
-
+  
   justify-items:center;
-
-    justify-content: space-evenly;
+  
+    justify-content: space-evenly;	
 }
 
 .component{
@@ -141,7 +54,7 @@ body.logged .logged-out{
   align-self: end;
   border:none;
   z-index:10;
-
+  
 }
 
 .component:hover{
@@ -168,17 +81,17 @@ body.logged .logged-out{
   linear-gradient(#1b1e18 .1em, transparent .1em), /*major horiz*/
   linear-gradient(90deg, rgba(0,0,0,.3) .1em, transparent .1em), /*minor vert*/
   linear-gradient(90deg, #1b1e18 .1em, transparent .1em); /*major vert*/
-
-  background-size:
+    
+  background-size: 
     calc(10em / 10) calc(10em / 10),
     10em 10em,
     calc(10em / 10) calc(10em / 10),
     10em 10em,
     10em 10em,
     10em 10em;
-
+    
 /*
-    background-size:
+    background-size: 
     calc(10vw / 10) calc(10vw / 10),
     10vw 10vw,
     calc(10vw / 10) calc(10vw / 10),
@@ -188,3 +101,6 @@ body.logged .logged-out{
 */
   position:relative;
 }
+
+
+
