--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,49 @@
-[Home Page]
+<!DOCTYPE html>
+<html lang="en" >
+
+<head>
+  <meta charset="UTF-8">
+  <title>new layout</title>
+  
+  
+  <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.css'>
+
+      <link rel="stylesheet" href="css/style.css">
+
+  
+</head>
+
+<body>
+
+  <div id="main-wrapper">
+  
+  <div id="top-tool-bar"></div>
+  
+  <div id="library-wrapper">
+<!--     <div id="category-tabs"></div> -->
+    <div class="component ui-widget-content"></div>
+    <div class="component ui-widget-content"></div>
+    <div class="component ui-widget-content"></div>
+    <div class="component ui-widget-content"></div>
+    <div class="component ui-widget-content"></div>
+    <div class="component ui-widget-content"></div>
+    <div class="component ui-widget-content"></div>
+    <div class="component ui-widget-content"></div>
+  </div>
+  <div id="grid-wrapper" class="ui-widget-header">
+
+  </div>
+</div>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js'></script>
+
+  
+
+    <script  src="js/index.js"></script>
+
+
+
+
+</body>
+
+</html>
