--- a/views/partials/diode-svg.handlebars
+++ b/views/partials/diode-svg.handlebars
@@ -4,7 +4,9 @@
                 <path d="M3,10 L43.5030863,10" id="Path-3" stroke="#979797"></path>
                 <g id="Rectangle-5" transform="translate(19.071068, 10.071068) rotate(-45.000000) translate(-19.071068, -10.071068) ">
                     
-                    <polygon id="path-1" points="24.0710678 5.07106781 24.0710678 15.0710678 14.0710678 15.0710678" fill="#D8D8D8" fill-rule="evenodd" ></polygon>
+<!--                    <polygon id="path-1" points="24.0710678 5.07106781 24.0710678 15.0710678 14.0710678 15.0710678" fill="#D8D8D8" fill-rule="evenodd" ></polygon>-->
+                    
+                    <polygon id="path-1" points="24.0710678 5.07106781, 24.0710678 15.0710678, 14.0710678 15.0710678" fill="none"></polygon>
                     
                     <path stroke="#979797" stroke-width="1" d="M23.5710678,6.27817459 L15.2781746,14.5710678 L23.5710678,14.5710678 L23.5710678,6.27817459 Z"></path>
                 </g>
