--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,17 @@
-[Home Page]
+<div id="home-body">
+    <div id="home-header">
+        <div id="header-left">
+            <div id="header-logo">Logo</div>
+            <h1 id="header-title">Circuit Studio</h1>
+        </div>
+        <div id="header-links">Links</div>
+
+    </div>
+    <div id="home-jumbotron">
+        <div id="home-subtitle"></div>
+        <div id="home-image"></div>
+    </div>
+
+    <div id="home-info">
+    </div>
+</div>
