--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <style>
-/* Log test */
+html{
+    height: 100%;
+}
+
 .logged-in {
     display: none;
 }
@@ -22,20 +25,10 @@ body.logged .logged-out{
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <link rel="stylesheet" href="../../style.css"/>
+    <link rel="stylesheet" href="../../style-home.css"/>
+
 </head>
 
 <body class="{{bodytype}}">
-    <!-- A bunch of placeholder stuff
-    Fix as need be -->
-    <a href="/">Home</a>
-    <p class="logged-in">You're logged in as {{user.username}}</p>
-    <a class="logged-out"href="/register">Temp link to register</a>
-    <a class="logged-out"href="/login">Temp link to login</a>
-    <a class="logged-in" href="/logout">Temp link to logout (should only seen if logged)</a>
-
-
-    <p>[Main Layout]</p>
-
-
     {{{body}}}
 </body>
