--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -4,14 +4,26 @@
             <div id="header-logo">Logo</div>
             <h1 id="header-title">Circuit Studio</h1>
         </div>
-        <div id="header-links">Links</div>
+        <div id="header-links">
+            <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Team</a></li>
+            </ul>
+        </div>
 
     </div>
     <div id="home-jumbotron">
-        <div id="home-subtitle"></div>
-        <div id="home-image"></div>
+        <div id="home-subtitle">
+            <ul>
+                <li>This thing is awesome!</li>
+                <li>You can do X! And Z! With your friends!</li>
+                <li>Nicko is not a copywriter!</li>
+            </ul>
+        </div>
+        <div id="home-image">Screenshot here</div>
     </div>
 
     <div id="home-info">
+        Bunch of detailed and to do here?
     </div>
 </div>
