--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,19 +5,19 @@ html{
 }
 
 .logged-in {
-    display: none;
+    display: none !important;
 }
 
 .logged-out{
-    display: block
+    display: inline !important;
 }
 
 body.logged .logged-in{
-    display: block;
+    display: inline !important;
 }
 
 body.logged .logged-out{
-    display: none;
+    display: none !important;
 }
 </style>
 <head>
