--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -17,13 +17,16 @@
             <ul>
                 <li>This thing is awesome!</li>
                 <li>You can do X! And Z! With your friends!</li>
-                <li>Nicko is not a copywriter!</li>
+                <li>I am not a copywriter!</li>
             </ul>
         </div>
-        <div id="home-image">Screenshot here</div>
+        <div id="home-image">
+            <!-- <img src="../preview.png"></img> -->
+        </div>
     </div>
 
     <div id="home-info">
         Bunch of detailed and to do here?
+        We should probably have a list somewhere.
     </div>
 </div>
