--- a/public/style-home.css
+++ b/public/style-home.css
@@ -61,11 +61,17 @@
 
     display: grid;
     grid-template-columns: 1fr 2fr;
+    background-image: url("preview.png");
+    background-size: cover;
 }
     #home-subtitle{
         grid-column: 1;
-        background-color: orange;
-        padding: 50px 20px;
+        /* background-color: orange;
+        opacity: 0.8; */
+        background: linear-gradient(to right, rgba(100, 100, 100, 1.0), rgba(100, 100, 100, 0));
+        color: white;
+        text-shadow: 0px 0px 1px black;
+        padding: 60px 10px;
     }
 
         #home-subtitle ul{
@@ -74,12 +80,11 @@
         }
 
         #home-subtitle ul li{
-            margin: 20px;
+            margin: 10px;
         }
 
     #home-image{
         grid-column: 2;
-        background-color: purple;
     }
 
 #home-info{
