--- a/public/style.css
+++ b/public/style.css
@@ -62,6 +62,9 @@ body{
 #cs-title{
     text-align: center;
     color:white;
+    font-size:1.25em;
+    letter-spacing:3px;
+    
 }
 
 .component{
