some quick captions

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -6,15 +6,24 @@
 
   <div id="library-wrapper">
 <!--     <div id="category-tabs"></div> -->
-    <div class="component" id="ph-resistor"> <svg> {{> resistor-svg}} </svg></div>
-    <div class="component" id="ph-capacitor"> <svg> {{> capacitor-svg}} </svg> </div>
+    <div class="component" id="ph-resistor">
+        <p>resistor</p>
+        <svg> {{> resistor-svg}} </svg>
+      </div>
+    <div class="component" id="ph-capacitor">
+        <p>capacitor</p>
+        <svg> {{> capacitor-svg}} </svg> 
+      </div>
     <div class="component" id="ph-switch">
+        <p>switch</p>
       <svg> {{> switch-svg}} </svg> 
       </div>
     <div class="component" id="ph-transistor">
+        <p>transistor</p>
       <svg> {{> transistor-svg}} </svg> 
       </div>
     <div class="component" id="ph-diode">
+        <p>diode</p>
             <svg> {{> diode-svg}} </svg> 
       </div>
     <div class="component"></div>
