--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Placeholder here</title>
+    <title>Circuit.Studio</title>
 
     <link rel="stylesheet" href="../../style.css"/>
 </head>
